--- a/style.css
+++ b/style.css
@@ -22,12 +22,23 @@
 		main{
 			background: white;
 			padding; 5px;
+
+		}
+		main section{
+			overflow: hidden;
+		}
+		main section p img{
+            float: left;
+			width: 200 px;
+			height: auto;
+			margin-right: 5px;
 		}
 		footer{
 			  padding; 
 			  5px;
 
 		}
+
 		
 
 	
