--- a/article.css
+++ b/article.css
@@ -1,3 +1,27 @@
 p.intro{
 	font-size: 15px;
 }
+/*
+main section article img{
+	widith: 50%;
+	display: block;
+	margin: auto;
+}
+main section article .image-description{
+	text-align:  center;
+	color: grey;
+	font-size: 10px;
+}
+*/
+main section article figure img{
+	width: 50%;
+	display: block;
+	margin: auto;
+
+}
+main section article figure{
+	text-align:  center;
+	color: grey;
+	font-size: 10px;
+	font-style: italic;
+}
