--- a/style.css
+++ b/style.css
@@ -1,77 +1,100 @@
+body {
+    font-family: Arial;
+    font-size: 12px;
+    background: grey;
+}
 
-		body{
-			font-family: Arial; 
-			font-size: 12px; 
-			background: gray;
-		}
-		header{
-			background-color: #84cb00;
-			background-image: url('images/cars.jpg');
-			background-repeat: no-repeat;
-			background-position: center;
-            padding: 5px;
-            text-align: center;
-		}
-		header h1{
-			color: #fff;
-			text-shadow: 2px 2px #00;
-		}
-		header nav{
+header {
+    background-color: #84cb00;
+    background-image: url('images/cars.jpeg');
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 5px;
+    text-align: center;
 
-			text-align: center; 
-			background: rgb(19, 86, 19);
-			padding: 5px;
-		}
-		header nav a{
-				color: #fff;
-				background: #0a700a;
-				padding: 5px;
-				margin: 0 5px;
+}
 
-		}
-		header nav a:hover{
-			background: rgb(8, 253, 8);
+header h1 {
+    color: #fff;
+    text-shadow: 2px 2px #000;
+}
 
-		}
-		main section a:hover{
-			font-weight: bold;
-		}
-		main{
-			background: white;
-			padding; 5px;
+header nav {
+    text-align: center;
+    background: rgb(19, 86, 19);
+    overflow: hidden;
+    padding: 5px;
+}
 
-		}
-		main section{
-			overflow: hidden;
-		}
-		.background-green{
-			background: green;
-		}
-		.background-red{
-			background: red;
-		}
-		.background-aqua{
-			background: aqua;
-		}
-		.top-headline{
-			color: blue;
-		}
-		.main-link{
-			text-transform: uppercase;
-		}
-		
-		main section p img{
-            float: left;
-			width: 200 px;
-			height: auto;
-			margin-right: 5px;
-		}
-		footer{
-			  padding; 
-			  5px;
+header nav a {
+    color: #fff;
+    background: #0a700a;
+    padding: 5px;
+    margin: 0 10px;
+    /* margin-right: 5px;
+    margin-left: 5px; */
+}
 
-		}
+header nav a:hover {
+    background: rgb(8, 253, 8);
+}
 
-		
+main {
+    background: white;
+    padding: 5px;
+}
 
-	
+main section {
+    overflow: hidden;
+}
+
+main section a:hover {
+    font-weight: bold;
+}
+
+.background-red {
+    background: red;
+}
+
+.background-green {
+    background: green;
+}
+
+.background-aqua {
+    background: aqua;
+}
+
+.top-headline {
+    color: blue;
+}
+
+.main-link {
+    text-transform: uppercase;
+}
+
+main section p img {
+    width: 200px;
+    float: left;
+    margin-right: 5px;
+}
+
+footer {
+    padding: 5px;
+}
+
+.article {
+    display: inline-block;
+    position: relative;
+}
+
+.article .counter {
+    position: absolute;
+    padding: 5px;
+    background: red;
+    left: 100%;
+    top: 0;
+    width: 20px;
+    margin-left: -10px;
+    font-size: 10px;
+    margin-top: -5px;
+}
